Manifest_models/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <name>
  labels:
    <label name>: <value>
spec:
  containers:
  - name: <name>
    image: <image>
