Manifest_models/podWithPVC.yaml
apiVersion: v1
kind: Pod
metadata:
  name: <name>
spec:
  volumes:
    - name: <name of your volume>
      persistentVolumeClaim:
        claimName: <Name of the PVC>
  containers:
    - name: <name of the container>
      image: <image name>
      ports:
        - containerPort: <port>
          name: <port name>
      volumeMounts:
        - mountPath: <mount path in the pod>
          name: <name of the volume given above>
