Manifest_models/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: <name>
spec:
  podSelector:
    matchLabels:
      # Labels and values to match
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        # - ipBlock:
        #     cidr: 172.17.0.0/16
        #     except:
        #       - 172.17.1.0/24
        # - namespaceSelector:
        #     matchLabels:
        #       project: myproject
        # - podSelector:
        #     matchLabels:
        #       role: frontend
      ports:
        - protocol: <TCP/UDP>
          port: <port>
  egress:
    - to:
        # - ipBlock:
        #     cidr: 172.17.0.0/16
        #     except:
        #       - 172.17.1.0/24
        # - namespaceSelector:
        #     matchLabels:
        #       project: myproject
        # - podSelector:
        #     matchLabels:
        #       role: frontend
      ports:
        - protocol: <TCP/UDP>
          port: <port>
